--- a/styles/style.css
+++ b/styles/style.css
@@ -19,31 +19,33 @@ body {
     white-space: nowrap;
 }
 
+.duplicateList {
+    color: black;
+    padding: 5px;
+    background-color: #f5f5f5;
+    font-size: 16px;
+    width: max-content;
+    min-width: 250px;
+    max-height: 500px;
+    overflow: scroll;
+}
+
 @media screen and (min-width: 600px) {
-    .sidebar {
-        padding: 0;
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        overflow-x: hidden;
-        overflow-y: auto;
-        width: 280px;
-    }
     main {
-        margin-left: 280px;
+        margin-right: 320px;
+    }
+    .duplicateList {
+        float: right;
+        margin-right: -290px;
     }
 }
 
-@media screen and (min-width: 1300px) {
+@media screen and (min-width: 1420px) {
     body {
         max-width: 1100px;
     }
-    .sidebar {
-        width: 280px;
-    }
     main {
-        margin-left: 320px;
+        margin-right: 320px;
     }
 }
 
@@ -99,14 +101,6 @@ code pre {
         .docParentData { color: rgb(64, 160, 64); }
 .nonstandardDependData { color: rgb(160, 96, 0); }
    .standardDependData { color: rgb(0, 100, 180); }
-
-.duplicateList {
-    color: black;
-    padding: 5px;
-    background-color: #f5f5f5;
-    font-size: 16px;
-    width: max-content;
-}
 
 .duplicateList ul {
     padding-left: 19px;
@@ -189,9 +183,4 @@ code pre {
     .footnote {
         color: lightcoral;
     }
-}
-
-#duplicateVisualization {
-    margin: 10px;
-    padding: 5px;
 }
